--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
         <link href="./style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <h1>Rebati Sitad&eacute;l</h1>
+        <h1 id="title">Rebati Sitad&eacute;l</h1>
         <div id="panel">
             <div id="stats">
-                <div id="clock-div">
-                    <h1>Clock</h1>
-                    <h2 id="clock">0:00</h2>
-                </div>
-                <div id="points-div">
-                    <h1>Mistakes</h1>
-                    <h2 id="points">0</h2>
+                <div id="stats-row">
+                    <div id="clock-div">
+                        <h1>Clock</h1>
+                        <h1 id="clock">0:00</h1>
+                    </div>
+                    <div id="points-div">
+                        <h1>Mistakes</h1>
+                        <h1 id="points">0</h1>
+                    </div>
                 </div>
                 <button id="reset">New Game</button>
             </div>
