--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Rebati Sitad&eacute;l</title>
+        <title>Rebati Sitad&egrave;l</title>
         <link href="./style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <h1 id="title">Rebati Sitad&eacute;l</h1>
+        <h1 id="title">Rebati Sitad&egrave;l</h1>
         <div id="panel">
             <div id="stats">
+                <div id="image-div">
+                    <img id="image"></img>
+                </div>
                 <div id="stats-row">
                     <div id="clock-div">
-                        <h1>Clock</h1>
+                        <h1>Chrono</h1>
                         <h1 id="clock">0:00</h1>
                     </div>
                     <div id="points-div">
-                        <h1>Mistakes</h1>
+                        <h1>Erreurs</h1>
                         <h1 id="points">0</h1>
                     </div>
                 </div>
-                <button id="reset">New Game</button>
+                <button id="reset">Suivant</button>
             </div>
             <div id="board"></div>
         </div>
