--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <link href="./style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <h1 id="title">Rebati Sitad&egrave;l</h1>
+        <div id="header-div">
+            <h1 id="title">Rebati Sitad&egrave;l</h1>
+            <p id="signature">@TayinoGames</p>
+        </div>
         <div id="panel">
             <div id="stats">
                 <div id="image-div">
@@ -25,7 +28,6 @@
             </div>
             <div id="board"></div>
         </div>
-        
         <div id="grid"></div>
         <script src="script.js"></script>
     </body>
